tests/NormalTests/paczka1/fuzzy1/42000092.err
Error in line 7: RDpDnJZT75u A291 33,0
Error in line 8: RDpDnJZT75u A901 38,4
Error in line 11: qOuI S767 61,0
Error in line 20: 7UM7 A901 80,96
Error in line 6: uyTpeHhv S767 33,7
Error in line 12: 7UM7 S767 12,2
Error in line 29: qOuI A291 94,8
Error in line 4: A291 S485 40,5
Error in line 30: qOuI S767 68,2
Error in line 35: qOuI A901 9,5
Error in line 17: RDpDnJZT75u S767 109,2
